@@ -1,6 +1,10 @@
 
     - Incompatible Change: removed all previously deprecated methods.
     
+    - Incompatible Change: HTML::FormFu::QueryType::Catalyst
+      File uploads under Catalyst no longer have copy_to(), link_to() and
+      catalyst_upload() methods
+    
     - Deprecated passing multiple arguments to many methods, where they were
       being implicitly converted to a hash-ref or array-ref.
       A warning is now issued.
